--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,26 @@
 # Site settings
-name: Brittany Chiang
-title: Brittany Chiang | Front End Software Engineer
+name: Amit Shanbhoug
+title: Amit Shanbhoug | Developer | Aspiring PM
 description: Design-minded front-end software engineer focused on building beautiful interfaces and experiences
-url: https://bchiang7.github.io/
+url: https://amitshanbhoug.github.io/
 baseurl: ''
-email: brittany.chiang@gmail.com
+email: amit.shanbhoug@outlook.com
 cover: https://bchiang7.github.io/img/og.png
 logo: https://bchiang7.github.io/img/emojis/technologist.png
 resume: https://bchiang7.github.io/resume.pdf
 social:
   - title: email
-    url: mailto:brittany.chiang@gmail.com
-  - title: twitter
-    url: https://twitter.com/bchiang7
-  - title: instagram
-    url: https://instagram.com/bchiang7
-  - title: codepen
-    url: http://codepen.io/bchiang7
+    url: mailto:amit.shanbhoug@outlook.com
+  #- title: twitter
+   # url: https://twitter.com/bchiang7
+  #- title: instagram
+   # url: https://instagram.com/bchiang7
+  #- title: codepen
+   # url: http://codepen.io/bchiang7
   - title: github
-    url: https://github.com/bchiang7
+    url: https://github.com/AmitShanbhoug
   - title: linkedin
-    url: https://www.linkedin.com/in/bchiang7
+    url: https://www.linkedin.com/in/amitshanbhoug/
 
 # Build settings
 markdown: kramdown
