--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,17 +1,17 @@
-- company: Upstatement
+- company: University of Ottawa, Undergraduate Research Scholarship
   url: https://www.upstatement.com/
-  time: May 2018 - Present
-  position: Engineer
+  time: Nov 2021 - Present
+  position: Researcher (SMART/IOT)
 
-- company: Scout
+- company: Delphic Research
   url: https://web.northeastern.edu/scout/
-  time: Jan - June 2018
-  position: Studio Developer
+  time: May - Aug 2021
+  position: Full-Stack Developer Intern
 
-- company: Apple Music
+- company: Sustaining the Knowledge Commons Project (University of Ottawa)
   url: https://www.apple.com/music/
-  time: July - Dec 2017
-  position: UI Engineer Co-op
+  time: Jan - Apr 2021
+  position: Research Assistant
 
 - company: Scout
   url: https://web.northeastern.edu/scout/
