Updated board links

--- a/_data/boardexperience.yml
+++ b/_data/boardexperience.yml
@@ -1,14 +1,14 @@
 - company: Fulcrum Publishing Society
-  url: https://www.upstatement.com/
-  time: Nov 2021 - Present
+  url: https://thefulcrum.ca/about-us/
+  time: Sep 2021 - Present
   position: Board Member
 
 - company: Canadian Roots Exchange
-  url: https://web.northeastern.edu/scout/
-  time: May - Aug 2021
+  url: https://canadianroots.ca/
+  time: Apr 2021 - Present
   position: Co Chair, Board of Directors
 
 - company: Engineers without Borders Canada
-  url: https://www.apple.com/music/
-  time: Jan - Apr 2021
+  url: https://www.ewb.ca/en/
+  time: Apr 2021 - Present
   position: Chapter Development Committee Member
