--- a/_data/workexperience.yml
+++ b/_data/workexperience.yml
@@ -18,27 +18,8 @@
   time: Jan - June 2017
   position: Studio Developer
 
-- company: Starry
+- company: Singapore Armed Forces
   url: https://starry.com/
-  time: July - Dec 2016
+  time: Sep 2016 - Sep 2018
   position: Software Engineer Co-op
 
-- company: Northeastern University
-  url: http://www.ccis.northeastern.edu/
-  time: Jan - May 2016
-  position: HCI Teaching Assistant
-
-- company: NU Women in Tech
-  url: http://nuwit.ccs.neu.edu/
-  time: Jan 2016 - May 2017
-  position: President & Web Chair
-
-- company: MullenLowe U.S.
-  url: https://us.mullenlowe.com/
-  time: July - Dec 2015
-  position: Creative Technologist Co-op
-
-- company: Northeastern University
-  url: http://www.ccis.northeastern.edu/
-  time: Mar - May 2015
-  position: HCI Research Assistant
