--- a/_data/workexperience.yml
+++ b/_data/workexperience.yml
@@ -1,25 +1,30 @@
 - company: University of Ottawa, Undergraduate Research Scholarship
-  url: https://www.upstatement.com/
+  url: https://scholarships.uottawa.ca/p/a/18948/
   time: Nov 2021 - Present
   position: Researcher (SMART/IOT)
 
 - company: Delphic Research
-  url: https://web.northeastern.edu/scout/
-  time: May - Aug 2021
+  url: https://www.delphicresearch.ca/
+  time: May 2021 - Aug 2021
   position: Full-Stack Developer Intern
 
-- company: Sustaining the Knowledge Commons Project (University of Ottawa)
-  url: https://www.apple.com/music/
+- company: University of Ottawa, Sustaining the Knowledge Commons Project 
+  url: https://sustainingknowledgecommons.org/
   time: Jan - Apr 2021
   position: Research Assistant
 
-- company: Scout
-  url: https://web.northeastern.edu/scout/
-  time: Jan - June 2017
-  position: Studio Developer
+- company: Enginehire
+  url: https://staffing.enginehire.io/
+  time: May 2020 - Aug 2020
+  position: Full-Stack Developer Intern
+
+- company: Mun Inc.
+  url: https://www.theglobalcitizenacademy.com/muninc
+  time: Apr 2017 - Sep 2017
+  position: Consultant
 
 - company: Singapore Armed Forces
-  url: https://starry.com/
+  url: https://www.mindef.gov.sg/web/portal/mindef/home
   time: Sep 2016 - Sep 2018
-  position: Software Engineer Co-op
+  position: Military Serviceman
 
