--- a/_data/workexperience.yml
+++ b/_data/workexperience.yml
@@ -5,7 +5,7 @@
 
 - company: Delphic Research
   url: https://www.delphicresearch.ca/
-  time: May 2021 - Aug 2021
+  time: May '21 - Aug '21
   position: Full-Stack Developer Intern
 
 - company: University of Ottawa, Sustaining the Knowledge Commons Project 
