--- a/_data/workexperience.yml
+++ b/_data/workexperience.yml
@@ -5,12 +5,12 @@
 
 - company: Delphic Research
   url: https://www.delphicresearch.ca/
-  time: May '21 - Aug '21
+  time: May 2021 - Aug 2021
   position: Full-Stack Developer Intern
 
 - company: University of Ottawa, Sustaining the Knowledge Commons Project 
   url: https://sustainingknowledgecommons.org/
-  time: Jan - Apr 2021
+  time: Jan 2021 - Apr 2021
   position: Research Assistant
 
 - company: Enginehire
