--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -7,7 +7,7 @@ baseurl: ''
 email: amit.shanbhoug@outlook.com
 cover: https://bchiang7.github.io/img/og.png
 logo: https://bchiang7.github.io/img/emojis/technologist.png
-resume: https://bchiang7.github.io/resume.pdf
+resume: https://amitshanbhoug.github.io/newresume.pdf
 social:
   - title: email
     url: mailto:amit.shanbhoug@outlook.com
