--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -6,7 +6,7 @@ languages:
   - item: Python
   - item: SQL
 
-tools&frameworks:
+toolsframeworks:
   - item: React & React Native
   - item: Django REST
   - item: Node.js
