--- a/_data/currentroles.yml
+++ b/_data/currentroles.yml
@@ -3,28 +3,23 @@
   time: Nov 2021 - Present
   position: Researcher (SMART/IOT)
 
-- company: Delphic Research
-  url: https://www.delphicresearch.ca/
-  time: May 2021 - Aug 2021
-  position: Full-Stack Developer Intern
+- company: Fulcrum Publishing Society
+  url: https://thefulcrum.ca/about-us/
+  time: Sep 2021 - Present
+  position: Board Member
 
-- company: University of Ottawa, Sustaining the Knowledge Commons Project 
-  url: https://sustainingknowledgecommons.org/
-  time: Jan 2021 - Apr 2021
-  position: Research Assistant
+- company: Canadian Roots Exchange
+  url: https://canadianroots.ca/
+  time: Apr 2021 - Present
+  position: Co Chair, Board of Directors
 
-- company: Enginehire
-  url: https://staffing.enginehire.io/
-  time: May 2020 - Aug 2020
-  position: Full-Stack Developer Intern
+- company: Engineers without Borders Canada
+  url: https://www.ewb.ca/en/
+  time: Apr 2021 - Present
+  position: Chapter Development Committee Member
 
-- company: Mun Inc.
-  url: https://www.theglobalcitizenacademy.com/muninc
-  time: Apr 2017 - Sep 2017
-  position: Consultant
-
-- company: Singapore Armed Forces
-  url: https://www.mindef.gov.sg/web/portal/mindef/home
-  time: Sep 2016 - Sep 2018
-  position: Military Serviceman
+  - company: Engineers without Borders uOttwa
+  url: https://www.ewb.ca/en/
+  time: Mar 2021 - Present
+  position: Technical Product Manager
 
