--- a/_data/currentroles.yml
+++ b/_data/currentroles.yml
@@ -1,7 +1,7 @@
 - company: University of Ottawa, Undergraduate Research Scholarship
   url: https://scholarships.uottawa.ca/p/a/18948/
   time: Nov 2021 - Present
-  position: Researcher (SMART/IOT)
+  position: Researcher (SMART/IoT solution for long-term care homes)
 
 - company: Fulcrum Publishing Society
   url: https://thefulcrum.ca/about-us/
@@ -23,3 +23,7 @@
   time: Mar 2021 - Present
   position: Technical Product Manager
 
+  - company: RapidRent
+  url: https://www.rapidrent.io/
+  time: Sep 2020 - Present
+  position: Founder
