--- a/_data/currentroles.yml
+++ b/_data/currentroles.yml
@@ -14,7 +14,7 @@
   position: Co Chair, Board of Directors
 
 - company: Engineers without Borders Canada
-  url: https://www.ewb.ca/en/
+  url: 
   time: Apr 2021 - Present
   position: Chapter Development Committee Member
 
