--- a/_data/currentroles.yml
+++ b/_data/currentroles.yml
@@ -14,16 +14,16 @@
   position: Co Chair, Board of Directors
 
 - company: Engineers without Borders Canada
-  url: 
+  url: https://www.ewb.ca/en/
   time: Apr 2021 - Present
   position: Chapter Development Committee Member
 
-  - company: Engineers without Borders uOttwa
+- company: Engineers without Borders uOttwa
   url: https://www.ewb.ca/en/
   time: Mar 2021 - Present
   position: Technical Product Manager
 
-  - company: RapidRent
+- company: RapidRent
   url: https://www.rapidrent.io/
   time: Sep 2020 - Present
   position: Founder
