--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -1,13 +1,11 @@
-- name: Surf Videos
+- name: Researcher
   url: https://github.com/bchiang7/Surf-Videos
   code: https://github.com/bchiang7/Surf-Videos
-  description: Small React project created during an interview process to browse and search surf videos via the YouTube API.
+  description: Awarded undergraduate research scholarship. Exploring a SMART/IoT solution for long-term care homes supervised by <a class="underline-link" href="https://paobranco.github.io/">Prof. Paula Branco</a>.
   used:
-    - thing: JavaScript
-    - thing: React
-    - thing: React Router
-    - thing: Axios
-    - thing: YouTube API
+    - thing: Literature Review
+    - thing: Data Pipeline
+    - thing: System Design
 
 - name: Halcyon Theme
   url: https://bchiang7.github.io/halcyon-site/
