--- a/_data/currentroles.yml
+++ b/_data/currentroles.yml
@@ -1,4 +1,4 @@
-- company: University of Ottawa, Undergraduate Research Scholarship
+- company: uOttawa, Undergraduate Research Scholarship
   url: https://scholarships.uottawa.ca/p/a/18948/
   time: Nov 2021 - Present
   position: Researcher (SMART/IoT solution for long-term care homes)
@@ -18,7 +18,7 @@
   time: Apr 2021 - Present
   position: Chapter Development Committee Member
 
-- company: Engineers without Borders uOttwa
+- company: Engineers without Borders uOttawa
   url: https://www.ewb.ca/en/
   time: Mar 2021 - Present
   position: Technical Product Manager
