--- a/_data/priorexperience.yml
+++ b/_data/priorexperience.yml
@@ -3,7 +3,7 @@
   time: May 2021 - Aug 2021
   position: Full-Stack Developer Intern
 
-- company: University of Ottawa, Sustaining the Knowledge Commons Project 
+- company: uOttawa, Sustaining the Knowledge Commons Project 
   url: https://sustainingknowledgecommons.org/
   time: Jan 2021 - Apr 2021
   position: Research Assistant
