--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -7,8 +7,8 @@
     - thing: Literature Review
 
 - name: Technical Product Manager (Ongoing)
-  url: 
-  description: Managing 6 developers building 3-D campus map mobile app, leading sprint planning and design reviews.
+  url: https://github.com/EWB-uOttawa/EWBCampusExplorer
+  description: Managing 6 developers building 3-D campus map mobile app, leading sprint planning and design reviews. Framer design h<a class="underline-link" href="https://framer.com/share/34ieQvn8KOf9jtvzQCzY/mxxqA6JcK#u9ocCJ6Xh" target="_blank">here</a>. 
   used:
     - thing: Jira
     - thing: Confluence
