--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,6 +1,6 @@
 # Site settings
 name: Amit Shanbhoug
-title: Amit Shanbhoug | Developer | Aspiring PM
+title: Amit Shanbhoug
 description: Design-minded front-end software engineer focused on building beautiful interfaces and experiences
 url: https://amitshanbhoug.github.io/
 baseurl: ''
