--- a/_data/currentroles.yml
+++ b/_data/currentroles.yml
@@ -11,7 +11,7 @@
 - company: Canadian Roots Exchange
   url: https://canadianroots.ca/
   time: Apr 2021 - Present
-  position: Co Chair, Board of Directors
+  position: Co-Chair, Board of Directors
 
 - company: Engineers without Borders Canada
   url: https://www.ewb.ca/en/
