--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ baseurl: ''
 email: amit.shanbhoug@outlook.com
 cover: https://bchiang7.github.io/img/og.png
 logo: https://bchiang7.github.io/img/emojis/technologist.png
-resume: https://amitshanbhoug.github.io/newresume.pdf
+productresume: https://amitshanbhoug.github.io/productresume.pdf
+engineeringresume: https://amitshanbhoug.github.io/engineeringresume.pdf
 social:
   - title: email
     url: mailto:amit.shanbhoug@outlook.com
