--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -28,6 +28,7 @@ product:
 
 interests:
   - item: SMART Cities
+  - item: Artificial Intelligence
   - item: Autonomous Vehicles
   - item: Spy Fiction/Non-Fiction
   
