--- a/_data/priorexperience.yml
+++ b/_data/priorexperience.yml
@@ -8,6 +8,11 @@
   time: Jan 2021 - Apr 2021
   position: Research Assistant
 
+- company: RapidRent
+  url: https://www.rapidrent.io/
+  time: Sep 2020 - Jan 2022
+  position: Founder
+
 - company: Queen's University Algorithmic Network & Trading Team
   url: http://quantt.ca/
   time: Sep 2020 - Apr 2021
