--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,7 +1,7 @@
 # Site settings
 name: Amit Shanbhoug
 title: Amit Shanbhoug
-description: Design-minded front-end software engineer focused on building beautiful interfaces and experiences
+description:
 url: https://amitshanbhoug.github.io/
 baseurl: ''
 email: amit.shanbhoug@outlook.com
