--- a/_data/currentroles.yml
+++ b/_data/currentroles.yml
@@ -1,7 +1,7 @@
 - company: uOttawa, Undergraduate Research Scholarship
   url: https://scholarships.uottawa.ca/p/a/18948/
   time: Nov 2021 - Present
-  position: Researcher (SMART/IoT solution for long-term care homes)
+  position: Researcher (SMART IoT solution for long-term care homes)
 
 - company: Fulcrum Publishing Society
   url: https://thefulcrum.ca/about-us/
