--- a/_data/priorexperience.yml
+++ b/_data/priorexperience.yml
@@ -1,3 +1,8 @@
+- company: uOttawa, Undergraduate Research Scholarship
+  url: https://scholarships.uottawa.ca/p/a/18948/
+  time: Nov 2021 - Mar 2022
+  position: Researcher (SMART IoT solution for long-term care homes)
+
 - company: Delphic Research
   url: https://www.delphicresearch.ca/
   time: May 2021 - Aug 2021
