--- a/_data/priorexperience.yml
+++ b/_data/priorexperience.yml
@@ -1,3 +1,8 @@
+- company: Engineers without Borders uOttawa
+  url: https://www.ewb.ca/en/
+  time: Mar 2021 - Apr 2022
+  position: Technical Product Manager
+
 - company: uOttawa, Undergraduate Research Scholarship
   url: https://scholarships.uottawa.ca/p/a/18948/
   time: Nov 2021 - Mar 2022
