--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -6,9 +6,9 @@
     - thing: System Design
     - thing: Literature Review
 
-- name: Technical Product Manager (Ongoing)
+- name: Technical Product Manager
   url: https://github.com/EWB-uOttawa/EWBCampusExplorer
-  description: Managing 6 developers building 3-D campus map mobile app, leading sprint planning and design reviews. Framer design <a class="underline-link" href="https://framer.com/share/34ieQvn8KOf9jtvzQCzY/mxxqA6JcK#u9ocCJ6Xh" target="_blank">here</a>. 
+  description: Managed 6 developers and 2 UI/UX designers building 3-D campus map mobile app, leading sprint planning and design reviews. Framer design <a class="underline-link" href="https://framer.com/share/34ieQvn8KOf9jtvzQCzY/mxxqA6JcK#u9ocCJ6Xh" target="_blank">here</a>. 
   used:
     - thing: Jira
     - thing: Confluence
