--- a/_data/currentroles.yml
+++ b/_data/currentroles.yml
@@ -1,7 +1,7 @@
 - company: Synopsys
   url: https://www.synopsys.com/
   time: May 2022 - Aug 2022
-  position: (Incoming) Software Engineer Intern, R&D Team
+  position: Software Engineer Intern, R&D Team
 
 - company: Fulcrum Publishing Society
   url: https://thefulcrum.ca/about-us/
