--- a/_data/priorexperience.yml
+++ b/_data/priorexperience.yml
@@ -1,3 +1,8 @@
+- company: Synopsys
+  url: https://www.synopsys.com/
+  time: May 2022 - Aug 2022
+  position: Software Engineer Intern, R&D Team
+
 - company: Engineers without Borders uOttawa
   url: https://www.ewb.ca/en/
   time: Mar 2021 - Apr 2022
