--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -7,8 +7,8 @@ baseurl: ''
 email: amit.shanbhoug@outlook.com
 cover: https://bchiang7.github.io/img/og.png
 logo: https://bchiang7.github.io/img/emojis/technologist.png
-productresume: https://amitshanbhoug.github.io/productresume.pdf
-engineeringresume: https://amitshanbhoug.github.io/engineeringresume.pdf
+productresume: # https://amitshanbhoug.github.io/productresume.pdf
+engineeringresume: # https://amitshanbhoug.github.io/engineeringresume.pdf
 
 social:
   - title: email
