--- a/_data/currentroles.yml
+++ b/_data/currentroles.yml
@@ -1,3 +1,8 @@
+- company: Ripple Ventures
+  url: https://www.rippleventures.com/
+  time: Sep 2022 - Present
+  position: Venture Fellow
+
 - company: Fulcrum Publishing Society
   url: https://thefulcrum.ca/about-us/
   time: Sep 2021 - Present
@@ -6,9 +11,9 @@
 - company: Canadian Roots Exchange
   url: https://canadianroots.ca/
   time: Apr 2021 - Present
-  position: Co-Chair, Board of Directors
+  position: Board Member
 
 - company: Engineers without Borders Canada
   url: https://www.ewb.ca/en/
   time: Apr 2021 - Present
-  position: Chapter Development Committee Member
+  position: Member, Board Committee - Chapter Development
