--- a/_data/priorexperience.yml
+++ b/_data/priorexperience.yml
@@ -1,3 +1,8 @@
+- company: Pythian
+  url: https://www.synopsys.com/
+  time: May 2022 - Aug 2022
+  position: Software Developer Intern, Office of the CTO
+
 - company: Synopsys
   url: https://www.synopsys.com/
   time: May 2022 - Aug 2022
@@ -18,7 +23,7 @@
   time: May 2021 - Aug 2021
   position: Full-Stack Developer Intern
 
-- company: uOttawa, Sustaining the Knowledge Commons Project 
+- company: uOttawa, Sustaining the Knowledge Commons Project
   url: https://sustainingknowledgecommons.org/
   time: Jan 2021 - Apr 2021
   position: Research Assistant
