--- a/_data/priorexperience.yml
+++ b/_data/priorexperience.yml
@@ -1,7 +1,22 @@
+- company: Cornell University
+  url:
+  time: Sep 2023 - Dec 2023
+  position: Teaching Assistant
+
+- company: University of Ottawa
+  url:
+  time: Jan 2023 - Apr 2023
+  position: Teaching Assistant, Implementation of Web Technologies in Organizations
+
 - company: Pythian
-  url: https://www.synopsys.com/
-  time: May 2022 - Aug 2022
+  url:
+  time: Jan 2023 - Apr 2023
   position: Software Developer Intern, Office of the CTO
+
+- company: Ripple Ventures
+  url: https://www.rippleventures.com/
+  time: Sep 2022 - Dec 2022
+  position: Venture Fellow
 
 - company: Synopsys
   url: https://www.synopsys.com/
@@ -18,10 +33,20 @@
   time: Nov 2021 - Mar 2022
   position: Researcher (SMART IoT solution for long-term care homes)
 
+- company: Fulcrum Publishing Society
+  url: https://thefulcrum.ca/about-us/
+  time: Sep 2021 - May 2023
+  position: Board Member
+
 - company: Delphic Research
   url: https://www.delphicresearch.ca/
   time: May 2021 - Aug 2021
   position: Full-Stack Developer Intern
+
+  - company: Canadian Roots Exchange
+  url: https://canadianroots.ca/
+  time: Apr 2021 - May 2023
+  position: Board Member
 
 - company: uOttawa, Sustaining the Knowledge Commons Project
   url: https://sustainingknowledgecommons.org/
